--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:targetSdkVersion="15" />
 
     <application
+		android:name=".android.controller.ApplicationController"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Main" >
