--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:targetSdkVersion="15" />
 
     <application
-        android:name=".ApplicationController"
+        android:name="com.example.frisbeegolfscores.ApplicationController"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Main" >
@@ -21,7 +21,7 @@
             android:required="true" />
 
         <activity
-            android:name=".FrisbeeGolfScores"
+            android:name="com.example.frisbeegolfscores.FrisbeeGolfScores"
             android:label="@string/title_activity_frisbee_golf_scores" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,8 +30,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ActivityAsetukset"
-            android:enabled="true"
+            android:name="com.example.frisbeegolfscores.ActivityAsetukset"
             android:label="@string/settings_taskbar_caption" >
             <intent-filter>
                 <category android:name="android.intent.category.PREFERENCE" />
