--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,12 @@
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="15" />
+    
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true" />
 
     <application
         android:name="com.example.frisbeegolfscores.ApplicationController"
