--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,16 +22,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Main" >
-        <uses-library
-            android:name="com.google.android.maps"
-            android:required="true" />
+        <uses-library android:name="com.google.android.maps" android:required="true" />
 
         <activity
             android:name="com.example.frisbeegolfscores.FrisbeeGolfScores"
             android:label="@string/title_activity_frisbee_golf_scores" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
